# Kamcp

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
scripts/: sync_docs.py
src/kamcp/: __main__.py
src/kamcp/server/: __init__.py  executor.py  initializer.py
src/kamcp/server/tools/: __init__.py  basic.py  termux.py
