[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.17,<0.10.0"]

[dependency-groups]
dev = ["ruff>=0.14.9"]

[project]
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.24.0",
    "openai>=2.11.0",
    "openai-agents>=0.6.3",
    "pydantic>=2.12.5",
]
description = "mcp server for kam."
name = "kamcp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.5"

[[project.authors]]
email = "lightjunction.me@gmail.com"
name = "LIghtJUNction"

[project.scripts]
kamcp = "kamcp.__main__:kamcp"

[tool.ruff.lint]
preview = true
select = ["ALL"]
